resolucao do exercicio modulo 11

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         <section id="product">
             <h2>Produtos</h2>
-            <div class="produtos conteudo">
+            <div class="produtos">
                 <article class="produto">
                     <img src="https://via.placeholder.com/320x320" alt="">
                     <h3>
